--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.21",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.424.0",
     "quill": "^2.0.2",
     "react": "^18.3.1",
