--- a/manifest.json
+++ b/manifest.json
@@ -19,19 +19,5 @@
         "purpose": "any maskable"
       }
     ],
-    "categories": ["education", "career"],
-    "screenshots": [
-      {
-        "src": "/screenshot1.png",
-        "type": "image/png",
-        "sizes": "540x720",
-        "form_factor": "narrow"
-      },
-      {
-        "src": "/screenshot2.png",
-        "type": "image/png",
-        "sizes": "720x540",
-        "form_factor": "wide"
-      }
-    ]
+    "categories": ["education", "career"]
   }
