--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
     "react-icons": "^5.3.0",
+    "react-js-pull-to-refresh": "^1.3.0",
     "react-pull-to-refresh": "^2.0.1",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
