--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@fortawesome/fontawesome-free": "^5.6.3",
     "@heroicons/react": "^2.1.5",
     "@mui/material": "^5.16.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "@shadcn/ui": "^0.0.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tanstack/react-table": "^8.20.1",
     "alertifyjs": "^1.14.0",
