--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-free": "^5.6.3",
-    "@heroicons/react": "^2.1.5",
+    "@heroicons/react": "^1.0.6",
     "@mui/material": "^5.16.6",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.1",
@@ -36,6 +36,7 @@
     "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-calendar": "^5.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
@@ -48,6 +49,8 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
+    "react-simple-pull-to-refresh": "^1.3.3",
+    "react-tooltip": "^5.28.0",
     "shadcn": "^1.0.0",
     "snapv2.0": "file:",
     "swiper": "^11.1.9",
